<resources>
    <string name="app_name">Insurance premium calculator</string>
    <string name="age">Age :</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="smoker">Smoker :</string>
    <string name="yes">Yes</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="totalpremium">TotalPremium :</string>

    <string-array name="AgeRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>25 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>

</resources>
